Deploy frontend form + script to connect to backend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,11 @@
-<form id="generate-form">
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>AI Influencer Generator</title>
 </head>
 <body>
-
-  <h1>AI Influencer Image Generator</h1>
+  <h1>AI Influencer Generator</h1>
 
   <form id="generate-form">
     <input type="file" id="image" accept="image/*" required />
@@ -21,6 +18,5 @@
   <img id="result-image" src="" alt="Generated image will appear here" style="max-width: 100%; margin-top: 20px;" />
 
   <script src="script.js"></script>
-
 </body>
 </html>
